--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -7,8 +7,27 @@
     android:fitsSystemWindows="true"
     tools:context="com.example.houcem.natco.MainPage">
 
-    <include layout="@layout/main_page_layout"
-        android:id="@+id/include" />
+    <android.support.v4.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <!-- The main content view -->
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/main_fragment"/>
+        <!-- The navigation drawer -->
+        <ListView android:id="@+id/left_drawer"
+            android:layout_width="240dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:choiceMode="singleChoice"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="0dp"
+            android:background="@color/blue">
+        </ListView>
+    </android.support.v4.widget.DrawerLayout>
 
 
 
