--- a/app/src/main/res/layout/news_feed_item.xml
+++ b/app/src/main/res/layout/news_feed_item.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/borderwithoutbg">
 
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/news_feed_image"
-        android:layout_gravity="right"
-        android:foregroundGravity="right"
+        android:layout_gravity="center_horizontal"
+        android:foregroundGravity="center_horizontal"
+
 
         android:layout_weight="0"/>
     <TextView
@@ -17,6 +19,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/news_feed_description"
         android:layout_gravity="center"
-        android:layout_weight="0"/>
+        android:layout_weight="0"
+        android:background="@drawable/border"/>
 
 </LinearLayout>
