--- a/app/src/main/res/layout/people_item.xml
+++ b/app/src/main/res/layout/people_item.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_gravity="center_vertical"
+    android:foregroundGravity="center"
+    android:background="@drawable/borderwithoutbg">
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/people_image"
         android:layout_gravity="center_horizontal"
         android:foregroundGravity="center_horizontal"
-
         android:layout_weight="0"/>
     <LinearLayout
         android:layout_width="wrap_content"
@@ -20,13 +22,15 @@
             android:layout_height="wrap_content"
             android:id="@+id/people_name"
             android:layout_gravity="center"
-            android:layout_weight="0"/>
+            android:layout_weight="0"
+            android:background="@drawable/border"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/people_description"
             android:layout_gravity="center"
-            android:layout_weight="0"/>
+            android:layout_weight="0"
+            android:background="@drawable/border"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,7 +38,8 @@
             android:autoLink="email"
             android:clickable="true"
             android:layout_gravity="center"
-            android:layout_weight="0"/>
+            android:layout_weight="0"
+            android:background="@drawable/border"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -42,7 +47,8 @@
             android:autoLink="web"
             android:clickable="true"
             android:layout_gravity="center"
-            android:layout_weight="0"/>
+            android:layout_weight="0"
+            android:background="@drawable/border"/>
 
     </LinearLayout>
 </LinearLayout>
